refactor: aegis.server 패키지의 스택 트레이스만 로깅하도록 설정 (#48)
* refactor: aegis.server 패키지의 스택 트레이스만 로깅하도록 설정

* fix: log-only-aegis-stack-trace 설정을 테스트 패키지의 설정 파일에도 추가